Added in visualization of a candidate

--- a/start/templates/start/add_candidate.html
+++ b/start/templates/start/add_candidate.html
@@ -22,6 +22,11 @@
                         </div>
 
                         <div class="form-outline mb-4">
+                            <label for="position">Предполагаемая позиция</label>
+                            {{form.position}}
+                        </div>
+
+                        <div class="form-outline mb-4">
                             <label for="email">Email</label>
                             {{form.email}}
                         </div>
