--- a/start/templates/start/jobs.html
+++ b/start/templates/start/jobs.html
@@ -3,7 +3,12 @@
 {% block content %}
 
 <body bgcolor="#76859B">
-<a class="btn btn-dark" href="/add_job" role="button">Добавить вакансию</a>
+
+    <div class="md:grid px-0 pt-4 ml-8">
+                <a href="/add_job">
+        <button class="h-8 bg-gray-800 hover:bg-gray-900 text-white text-sm font-medium hover:text-white pr-12 pl-12 hover:border-transparent rounded">Добавить вакансию</button>
+      </a>
+        </div>
 <div class=container style="position:relative">
     {% for job in jobs %}
     <div class="mx-auto mt-8 max-w-7xl py-0 px-3 sm:px-6 lg:px-8">
