--- a/start/templates/start/add_job.html
+++ b/start/templates/start/add_job.html
@@ -8,6 +8,8 @@
   <div class="px-4 py-5 sm:px-6">
     <h3 class="text-lg font-medium leading-6 text-gray-900">Данные вакансии</h3>
   </div>
+    <form action="/add_job" method="POST">
+{% csrf_token %}
   <div class="border-t border-gray-200">
     <dl>
       <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
@@ -37,6 +39,7 @@
       </div>
     </dl>
   </div>
+    </form>
 </div>
 </body>
 {% endblock %}
