--- a/start/templates/start/cercandidate.html
+++ b/start/templates/start/cercandidate.html
@@ -53,6 +53,11 @@
           </ul>
         </dd>
       </div>
+        <div class="inset-y-0 right-0 pr-2 sm:pr-0 sm:pl-96 bg-gray-50 px-4 py-1 sm:grid-cols-3 sm:gap-4 sm:px-80 rounded-b-lg">
+        <a href="/change_candidate/{{ candidate.id }}">
+        <button class="h-8 bg-gray-800 hover:bg-gray-900 text-white text-sm font-medium hover:text-white px-16 pl-16 hover:border-transparent rounded">Изменить</button>
+      </a>
+      </div>
     </dl>
   </div>
 </div>
