--- a/start/templates/start/cercandidate.html
+++ b/start/templates/start/cercandidate.html
@@ -53,6 +53,17 @@
           </ul>
         </dd>
       </div>
+      <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 gap-1 sm:px-6">
+        <dt class="text-sm font-medium text-gray-500">Способы связи</dt>
+        <div class="grid grid-cols-6">
+          <a href="https://t.me/{{ candidate.phone }}">
+        <img src="https://img.icons8.com/color/48/null/telegram-app--v1.png"/>
+            </a>
+          <a href="https://wa.me/{{ candidate.phone }}">
+        <img src="https://img.icons8.com/color/48/null/whatsapp--v1.png"/>
+            </a>
+          </div>
+      </div>
         <div class="inset-y-0 right-0 pr-2 sm:pr-0 sm:pl-96 bg-gray-50 px-4 py-1 sm:grid-cols-3 sm:gap-4 sm:px-80 rounded-b-lg">
         <a href="/change_candidate/{{ candidate.id }}">
         <button class="h-8 bg-gray-800 hover:bg-gray-900 text-white text-sm font-medium hover:text-white px-16 pl-16 hover:border-transparent rounded">Изменить</button>
