--- a/start/templates/start/cercandidate.html
+++ b/start/templates/start/cercandidate.html
@@ -1,7 +1,7 @@
 {% extends 'start/header.html' %}
 {% load static %}
 {% block content %}
-<body>
+<body bgcolor='white'>
     <div class="overflow-hidden bg-white shadow sm:rounded-lg">
   <div class="px-4 py-5 sm:px-6">
     <h3 class="text-lg font-medium leading-6 text-gray-900">Информация о кандидате</h3>
