--- a/start/templates/start/change_job.html
+++ b/start/templates/start/change_job.html
@@ -1,12 +1,12 @@
 {% extends 'start/header.html' %}
 {% load static %}
 {% block content %}
-<body>
+<body bgcolor="#76859B">
 <form  action="/change_job/{{ job.id }}" method="POST">
     {% csrf_token %}
-  <div class="border-t border-gray-200">
+  <div class="border-t pt-6 pr-72 pl-72 border-gray-200">
     <dl>
-      <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+      <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6 rounded-t-lg">
         <dt class="text-sm font-medium text-gray-500">Название вакансии</dt>
         <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0">{{form.name}}</dd>
       </div>
@@ -26,10 +26,10 @@
         <dt class="text-sm font-medium text-gray-500">Занятость</dt>
         <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0">{{form.employment}}</dd>
       </div>
-      <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+      <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6 rounded-b-lg">
         <dt class="text-sm font-medium text-gray-500">Статус вакансии</dt>
         <dd class="mt-1 text-sm text-gray-900 sm:col-span-2 sm:mt-0">{{form.status}}</dd>
-           <button type="submit" class="h-8 bg-gray-800 hover:bg-gray-900 text-white text-sm font-medium hover:text-white px-16 pl-16 hover:border-transparent rounded">Сохранить изменения</button>
+           <button type="submit" class="h-10 bg-gray-800 hover:bg-gray-900 text-white text-sm font-medium hover:text-white px-16 pl-16 hover:border-transparent rounded">Сохранить изменения</button>
       </div>
     </dl>
   </div>
