Added parser page

--- a/start/templates/start/header.html
+++ b/start/templates/start/header.html
@@ -45,7 +45,7 @@
 
               <a href="/jobseek" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Отклики</a>
 
-            <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Получить данные из файла</a>
+            <a href="/parser" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Получить данные из файла</a>
           </div>
         </div>
       </div>
