--- a/start/templates/start/cerjobseek.html
+++ b/start/templates/start/cerjobseek.html
@@ -62,20 +62,35 @@
       </div>
         <div>
           <div class="bg-gray-50 px-4 py-3 sm:grid sm:grid-cols-1 sm:gap-4 sm:px-6">
-              <dt class="text-l font-medium text-black-500">История</dt>
+<!--              <dt class="text-l font-medium text-black-500">История</dt>
             {% for action in actionHistory %}
               <dd class="mt-1 text-sm text-gray-900 sm:col-span-3 sm:mt-0">
-
-                {{ action.action_name }} <button class="ml-102 mr-96 border-2 border-red-500 p-2 text-red-500  rounded-lg flex"> {{ action.value_before }} </button><button class="ml-102 mr-96 border-2 border-green-500 p-2 text-green-500  rounded-lg flex">{{ action.value_after }} </button>{{ action.comment }}<br></dd>
-            {% endfor %}
+                {{ action.action_name }}
+                <button class="ml-102 mr-96 border-2 border-red-500 p-2 text-red-500  rounded-lg flex"> {{ action.value_before }} </button>
+                <button class="ml-102 mr-96 border-2 border-green-500 p-2 text-green-500  rounded-lg flex">{{ action.value_after }} </button>
+              {{ action.comment }}<br></dd>
+            {% endfor %}-->
+            <div class="flex flex-col rounded-xl border-gray-300 hover:border-gray-500 overflow-hidden shadow-xl min-wv-4 max-wv-9 min-hv-1 max-hv-9 border-1">
+			<div
+				class="h-14 bg-white transition-all gap-2 p-4 flex flex-row items-center">
+				<span class="flex-grow font-bold text-xl">История изменения статусов</span>
+			</div>
+			<div class="flex flex-col bg-white fit-content bg-white">
+				<div class="fit-content overflow-y-auto flex-grow p-4 " style="max-height:calc(60vh - 56px)">
+                  {% for action in actionHistory %}
+					<p>{{ action.action_name }}: с {{ action.value_before }} на {{ action.value_after }}</p>
+                  {% endfor %}
+				</div>
+			</div>
+		</div>
         </div>
       <div class="inset-y-0 right-0 pr-2 sm:pr-0 sm:pl-96 bg-gray-50 px-4 py-1 sm:grid-cols-3 sm:gap-4 sm:px-80 rounded-b-lg">
         <a href="/change_jobseek/{{ jobSeek.id }}">
         <button class="h-8 bg-gray-800 hover:bg-gray-900 text-white text-sm font-medium hover:text-white px-16 pl-16 hover:border-transparent rounded">Изменить</button>
       </a>
       </div>
+          </div>
     </dl>
-
 </div>
 </body>
 {% endblock %}
