Final small fixes

--- a/start/templates/start/cercandidate.html
+++ b/start/templates/start/cercandidate.html
@@ -71,6 +71,19 @@
       </div>
     </dl>
   </div>
+    <div class="flex flex-col rounded-xl border-gray-300 hover:border-gray-500 overflow-hidden shadow-xl min-wv-4 max-wv-9 min-hv-1 max-hv-9 border-1">
+        <div
+                class="h-14 bg-white transition-all gap-2 p-4 flex flex-row items-center">
+				<span class="flex-grow font-bold text-xl">Отклики кандидата!</span>
+        </div>
+        <div class="flex flex-col bg-white fit-content bg-white">
+				<div class="fit-content overflow-y-auto flex-grow p-4 " style="max-height:calc(60vh - 56px)">
+                  {% for job in jobseek %}
+					<p>Вакансия: {{ job.job.name}} ; Оффер: {{ job.offer }} ; Дата выхода: {{ job.release_date }}</p>
+                  {% endfor %}
+                </div>
+        </div>
+    </div>
 </div>
 </body>
 {% endblock %}
