--- a/start/templates/start/cercandidate.html
+++ b/start/templates/start/cercandidate.html
@@ -56,7 +56,7 @@
       <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 gap-1 sm:px-6">
         <dt class="text-sm font-medium text-gray-500">Способы связи</dt>
         <div class="grid grid-cols-6">
-          <a href="https://t.me/{{ candidate.phone }}">
+          <a href="https://t.me/+{{ candidate.phone }}">
         <img src="https://img.icons8.com/color/48/null/telegram-app--v1.png"/>
             </a>
           <a href="https://wa.me/{{ candidate.phone }}">
